# openapi.json
@@ -7,9 +7,12 @@
   "paths": {
     "/v1/files/{file_path}": {
       "put": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Upload File",
         "description": "Upload a file.",
-        "operationId": "upload_file_v1_files__file_path__put",
+        "operationId": "Files-upload_file",
         "parameters": [
           {
             "name": "file_path",
@@ -32,7 +35,7 @@
           "content": {
             "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/Body_upload_file_v1_files__file_path__put"
+                "$ref": "#/components/schemas/Body_Files-upload_file"
               }
             }
           }
@@ -48,6 +51,16 @@
               }
             }
           },
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PutFileResponse"
+                }
+              }
+            },
+            "description": "Created"
+          },
           "422": {
             "description": "Validation Error",
             "content": {
@@ -61,9 +74,12 @@
         }
       },
       "head": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Get File Metadata",
         "description": "Retrieve file metadata.\n\nNote: by convention, HEAD requests MUST NOT return a body in the response.",
-        "operationId": "get_file_metadata_v1_files__file_path__head",
+        "operationId": "Files-get_file_metadata",
         "parameters": [
           {
             "name": "file_path",
@@ -103,9 +119,12 @@
         }
       },
       "get": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Get File",
         "description": "Retrieve a file.",
-        "operationId": "get_file_v1_files__file_path__get",
+        "operationId": "Files-get_file",
         "parameters": [
           {
             "name": "file_path",
@@ -145,9 +164,12 @@
         }
       },
       "delete": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Delete File",
         "description": "Delete a file.\n\nNOTE: DELETE requests MUST NOT return a body in the response.",
-        "operationId": "delete_file_v1_files__file_path__delete",
+        "operationId": "Files-delete_file",
         "parameters": [
           {
             "name": "file_path",
@@ -189,9 +211,12 @@
     },
     "/v1/files": {
       "get": {
+        "tags": [
+          "Files"
+        ],
         "summary": "List Files",
         "description": "List files with pagination.",
-        "operationId": "list_files_v1_files_get",
+        "operationId": "Files-list_files",
         "parameters": [
           {
             "name": "page_size",
@@ -273,19 +298,19 @@
   },
   "components": {
     "schemas": {
-      "Body_upload_file_v1_files__file_path__put": {
+      "Body_Files-upload_file": {
         "properties": {
-          "file": {
+          "file_content": {
             "type": "string",
             "format": "binary",
-            "title": "File"
+            "title": "File Content"
           }
         },
         "type": "object",
         "required": [
-          "file"
+          "file_content"
         ],
-        "title": "Body_upload_file_v1_files__file_path__put"
+        "title": "Body_Files-upload_file"
       },
       "FileMetadata": {
         "properties": {
